adding lombok and logging